--- a/index.html
+++ b/index.html
@@ -7,6 +7,20 @@
     <title>! + Tab rulez</title>
   </head>
   <body>
+    <!-- grupy prywatne, ale dopisać rbrzegowy -->
+    <!-- F1 -> wszystkie akcje w edytorze, skrót do wszystkiego -->
+    <!-- Ctrl+P -> przechodzenie między plikami -->
+    <!-- Wtyczki: Mithril Emmet, Live Server, Pretter, (One Dark Pro) -->
+    <!-- validator.w3.org -->
+    <!-- <!DOCTYPE html> - najnowsza wersja html-a -->
+    <!-- lang można dodać do każdego znacznika -->
+
+    <!-- dodawaj title i content description -->
+    <!-- wrap with abbreviation -->
+    <!-- shift+alt+F / F1 -> format -->
+    <!-- "to najlepszy obraz w sieci" -->
+
+
     <!-- encje: &nbsp; &gt; &lt; -->
     <!-- pogrubienie: b, strong -->
     <!-- pochylenie: i, em -->
