--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>! + Tab rulez</title>
   </head>
   <body>
+    <h1>Going live</h1>
+    <h2>Wohoo</h2>
     <!-- grupy prywatne, ale dopisać rbrzegowy -->
     <!-- F1 -> wszystkie akcje w edytorze, skrót do wszystkiego -->
     <!-- Ctrl+P -> przechodzenie między plikami -->
