--- a/lab04/index.html
+++ b/lab04/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/a5cccf6e02.js" crossorigin="anonymous"></script>
     <title>Lab 04</title>
   </head>
   <body>
@@ -24,9 +24,9 @@
           
                 <span>LABELS</span>
                 <ul id="labels">
-                    <li><i class="fas fa-square"></i>Private</li>
-                    <li><i class="fas fa-square"></i>Job</li>
-                    <li><i class="fas fa-square"></i>Flight</li>
+                    <li><i class="fas fa-square sq1"></i>Private</li>
+                    <li><i class="fas fa-square sq2"></i>Job</li>
+                    <li><i class="fas fa-square sq3"></i>Flight</li>
                 </ul>
                 
             </div>
@@ -34,7 +34,7 @@
     </header>
     <main>
         <div class="mails">
-            <img src="/lab04/webmail/avatary/p5.png" alt="awatar5">
+            <img src="webmail/avatary/p5.png" alt="awatar5">
             <div class="mail-details">
                 <span class="mail-name">May June</span>
                 <span class="mail-topic">New York New Yoork</span>
@@ -42,7 +42,7 @@
             </div>
         </div>
         <div class="mails mail-left-border">
-            <img src="/lab04/webmail/avatary/p4.png" alt="awatar4">
+            <img src="webmail/avatary/p4.png" alt="awatar4">
             <div class="mail-details">
                 <span class="mail-name">Johny Cash</span>
                 <span class="mail-topic">Re: Pull Requests</span>
@@ -50,7 +50,7 @@
             </div>
         </div>
         <div class="mails mail-left-border">
-            <img src="/lab04/webmail/avatary/p3.png" alt="awatar3">
+            <img src="webmail/avatary/p3.png" alt="awatar3">
             <div class="mail-details">
                 <span class="mail-name">Your Wordpress</span>
                 <span class="mail-topic">Last warning</span>
@@ -58,7 +58,7 @@
             </div>
         </div>
         <div class="mails">
-            <img src="/lab04/webmail/avatary/p2.png" alt="awatar2">
+            <img src="webmail/avatary/p2.png" alt="awatar2">
             <div class="mail-details">
                 <span class="mail-name">June Ray</span>
                 <span class="mail-topic">Re: That night</span>
@@ -66,7 +66,7 @@
             </div>
         </div>
         <div class="mails">
-            <img src="/lab04/webmail/avatary/p1.png" alt="awatar1">
+            <img src="webmail/avatary/p1.png" alt="awatar1">
             <div class="mail-details">
                 <span class="mail-name">Andrew Clearwater</span>
                 <span class="mail-topic">What about materials?</span>
@@ -74,7 +74,7 @@
             </div>
         </div>
         <div class="mails">
-            <img src="/lab04/webmail/avatary/p6.png" alt="awatar6">
+            <img src="webmail/avatary/p6.png" alt="awatar6">
             <div class="mail-details">
                 <span class="mail-name">Chris Duck</span>
                 <span class="mail-topic">Donec sagittis dolor ut quam phretra pretium varius in nibh</span>
@@ -82,7 +82,7 @@
             </div>
         </div>
         <div class="mails">
-            <img src="/lab04/webmail/avatary/p6.png" alt="awatar6">
+            <img src="webmail/avatary/p6.png" alt="awatar6">
             <div class="mail-details">
                 <span class="mail-name">Helen Dominic</span>
                 <span class="mail-topic">You're crazy, really!</span>
