--- a/!project/gallery.html
+++ b/!project/gallery.html
@@ -24,14 +24,17 @@
                 </svg>
             </button>
                 <div class="menu-items">
-                    <a href="#">Strona główna</a>
-                    <a href="gallery.html">Galeria</a>
+                    <a href="index.html">Strona główna</a>
+                    <a href="#">Galeria</a>
                     <a href="#">O mnie</a>
                     <a href="#">Cennik</a>
                 </div>
         </header>
-        <main>
-        </main>
+        <div class="gallery">
+            <img src="img/368-1.jpg" alt="photo">
+            <img src="img/368-2.jpg" alt="photo">
+            <img src="img/368-3.jpg" alt="photo">
+        </div>
         <footer>
             <div class="contact">
                 <span>Marcin Figura</span>
