--- a/!project/gallery.html
+++ b/!project/gallery.html
@@ -18,10 +18,12 @@
                 <a href="mailto:marcinvideo5@onet.pl"><i class="fas fa-envelope-square"></i></a>
             </div>
             <div id="headers">
-                <h1>Marcin Figura</h1>
-                <div id="lesser-headers">
-                    <h6>videofilmowanie & fotobudka</h6>
-                </div>
+                <a href="index.html">
+                    <h1>Marcin Figura</h1>
+                    <div id="lesser-headers">
+                        <h6>videofilmowanie & fotobudka</h6>
+                    </div>
+                </a>
             </div>
             <button class="menu" onclick="this.classList.toggle('opened'); this.setAttribute('aria-expanded', this.classList.contains('opened'))" aria-label="Main Menu">
                 <svg width="100" height="100" viewBox="0 0 100 100">
