about and homepage

--- a/!project/index.html
+++ b/!project/index.html
@@ -42,6 +42,24 @@
         <!-- /HEADER -->
         <main>
         </main>
+        <article>
+            <h2>Profesjonalny fotoreportaż z&nbspimprez okolicznościowych</h2>
+            <div class="event">
+                <h3>śluby</h3>
+            </div>
+            <div class="event">
+                <h3>wesela</h3>
+            </div>
+            <div class="event">
+                <h3>komunie</h3>
+            </div>
+            <div class="event">
+                <h3>chrzty</h3>
+            </div>
+            <div class="event">
+                <h3>studniówki</h3>
+            </div>
+        </article>
         <footer>
             <div class="contact">
                 <span>Marcin Figura</span>
