--- a/!project/about.html
+++ b/!project/about.html
@@ -41,10 +41,13 @@
     </header>
     <!-- /HEADER -->
         <div class="about">
-            <h3>Marcin Figura</h3>
             <p>
-                Fotograf i kamerzysta z 15-letnim doświadczeniem.
+                Od ponad 15 lat zajmuję się realizacją i&nbspmontażem filmów oraz fotoreportażem z&nbspimprez okolicznościowych takich jak śluby, wesela, komunie, chrzty czy studniówki. 
+Realizuję filmy, korzystając z&nbsppomysłów moich zleceniodawców, jak również z własnych. Zapraszam serdecznie do korzystania z moich usług.
             </p>
+            <img src="img/about1.jpg" onclick="photoBig('img/about1.jpg')" alt="Moje zdjęcie 1">
+            <img src="img/about2.jpg" onclick="photoBig('img/about2.jpg')" alt="Moje zdjęcie 2">
+            <div class="photo-big"></div>
         </div>
         <!-- FOOTER -->
         <footer>
@@ -70,6 +73,26 @@
             else
                 header.classList.add('slide-rev');   
         })
+
+        // SHOW PHOTO ON FULLSCREEN
+        function photoBig(photo) {
+            const photoBig = document.querySelector('.photo-big');
+            const container = document.querySelector('.container-fluid');
+            if(photoBig.classList.contains('show-big')) {
+                photoBig.classList.remove('show-big');
+                container.classList.remove('bg-filter');
+            } else {
+                photoBig.style.setProperty('background-image', "url("+photo+")");
+                photoBig.classList.add('show-big');
+                container.classList.add('bg-filter');
+            }
+
+            // hide big photo on click
+            photoBig.addEventListener('click', () => {
+                photoBig.classList.remove('show-big');
+                container.classList.remove('bg-filter');
+            })
+        }
     </script>
     <!-- /SCRIPT -->
 </body>
