--- a/!project/index.html
+++ b/!project/index.html
@@ -40,26 +40,30 @@
             </div>
         </header>
         <!-- /HEADER -->
-        <main>
-        </main>
-        <article>
-            <h2>Profesjonalny fotoreportaż z&nbspimprez okolicznościowych</h2>
-            <div class="event">
-                <h3>śluby</h3>
-            </div>
-            <div class="event">
-                <h3>wesela</h3>
-            </div>
-            <div class="event">
-                <h3>komunie</h3>
-            </div>
-            <div class="event">
-                <h3>chrzty</h3>
-            </div>
-            <div class="event">
-                <h3>studniówki</h3>
-            </div>
-        </article>
+        <div class="homepage">
+            <main>
+            </main>
+            <article>
+                <h2>Profesjonalny fotoreportaż z&nbspimprez okolicznościowych</h2>
+                <div class="events">
+                    <div class="event">
+                        <h3>śluby</h3>
+                    </div>
+                    <div class="event">
+                        <h3>wesela</h3>
+                    </div>
+                    <div class="event">
+                        <h3>komunie</h3>
+                    </div>
+                    <div class="event">
+                        <h3>chrzty</h3>
+                    </div>
+                    <div class="event">
+                        <h3>studniówki</h3>
+                    </div>
+                </div>
+            </article>
+        </div>
         <footer>
             <div class="contact">
                 <span>Marcin Figura</span>
