--- a/!project/about.html
+++ b/!project/about.html
@@ -43,7 +43,7 @@
         <div class="about">
             <p>
                 Od ponad 15 lat zajmuję się realizacją i&nbspmontażem filmów oraz fotoreportażem z&nbspimprez okolicznościowych takich jak śluby, wesela, komunie, chrzty czy studniówki. 
-Realizuję filmy, korzystając z&nbsppomysłów moich zleceniodawców, jak również z własnych. Zapraszam serdecznie do korzystania z moich usług.
+Realizuję filmy, korzystając z&nbsppomysłów moich zleceniodawców, jak również z&nbspwłasnych. Zapraszam serdecznie do korzystania z moich usług.
             </p>
             <img src="img/about1.jpg" onclick="photoBig('img/about1.jpg')" alt="Moje zdjęcie 1">
             <img src="img/about2.jpg" onclick="photoBig('img/about2.jpg')" alt="Moje zdjęcie 2">
