--- a/!project/about.html
+++ b/!project/about.html
@@ -41,10 +41,20 @@
     </header>
     <!-- /HEADER -->
         <div class="about">
-            <p>
-                Od ponad 15 lat zajmuję się realizacją i&nbspmontażem filmów oraz fotoreportażem z&nbspimprez okolicznościowych takich jak śluby, wesela, komunie, chrzty czy studniówki. 
-Realizuję filmy, korzystając z&nbsppomysłów moich zleceniodawców, jak również z&nbspwłasnych. Zapraszam serdecznie do korzystania z moich usług.
-            </p>
+            <div class="about-contact">
+                <p>
+                    Od ponad 15 lat zajmuję się realizacją i&nbspmontażem filmów oraz fotoreportażem z&nbspimprez okolicznościowych takich jak śluby, wesela, komunie, chrzty czy studniówki. 
+                Realizuję filmy, korzystając z&nbsppomysłów moich zleceniodawców, jak również z&nbspwłasnych. Zapraszam serdecznie do korzystania z moich usług.
+                </p>
+                <p>
+                    Kontakt:
+                    <ul>
+                        <li><a href="https://www.facebook.com/videomarpl/about/?ref=page_internal" target="_blank">Facebook</a></li>
+                        <li>Nr telefonu: 502065872</li>
+                        <li><a href="mailto:marcinvideo5@onet.pl">E-mail</a></li>
+                    </ul>
+                </p>
+            </div>
             <img src="img/about1.jpg" onclick="photoBig('img/about1.jpg')" alt="Moje zdjęcie 1">
             <img src="img/about2.jpg" onclick="photoBig('img/about2.jpg')" alt="Moje zdjęcie 2">
             <div class="photo-big"></div>
