--- a/!project/about.html
+++ b/!project/about.html
@@ -58,6 +58,7 @@
             <img src="img/about1.jpg" onclick="photoBig('img/about1.jpg')" alt="Moje zdjęcie 1">
             <img src="img/about2.jpg" onclick="photoBig('img/about2.jpg')" alt="Moje zdjęcie 2">
             <div class="photo-big"></div>
+            <div class="bg-filter"></div>
         </div>
         <!-- FOOTER -->
         <footer>
@@ -87,20 +88,16 @@
         // SHOW PHOTO ON FULLSCREEN
         function photoBig(photo) {
             const photoBig = document.querySelector('.photo-big');
-            const container = document.querySelector('.container-fluid');
             if(photoBig.classList.contains('show-big')) {
                 photoBig.classList.remove('show-big');
-                container.classList.remove('bg-filter');
             } else {
                 photoBig.style.setProperty('background-image', "url("+photo+")");
                 photoBig.classList.add('show-big');
-                container.classList.add('bg-filter');
             }
 
             // hide big photo on click
             photoBig.addEventListener('click', () => {
                 photoBig.classList.remove('show-big');
-                container.classList.remove('bg-filter');
             })
         }
     </script>
