--- a/lab07/index.html
+++ b/lab07/index.html
@@ -55,8 +55,24 @@
     </div>
     <footer>
         <!-- 3 icons -->
-        <span>Selfy</span>
-        <span>c Copyright Selfy 2013</span>
+        <div class="foot right">
+            <a href="#" class="social-link">
+                <img src="images/icon-facebook@2x.png" alt="Facebook">
+            </a>
+            <a href="#" class="social-link">
+                <img src="images/icon-twitter@2x.png" alt="Twitter">
+            </a>
+            <a href="#" class="social-link">
+                <img src="images/icon-linkedin@2x.png" alt="LinkedIn">
+            </a>
+        </div>
+        <div class="foot left">
+            <a href="index.html" class="logo-foot">
+                <img src="img/logo-foot@2x.png" alt="logo">
+            </a>
+            <span>© Copyright Selfy 2013</span>
+        </div>
+        
     </footer>
     
 </body>
